[gd_scene load_steps=28 format=2]

[ext_resource path="res://game/enemies/cultist/sprites/idle.png" type="Texture" id=1]
[ext_resource path="res://game/enemies/cultist/sprites/attack.png" type="Texture" id=2]
[ext_resource path="res://game/enemies/cultist/sprites/die.png" type="Texture" id=3]
[ext_resource path="res://game/enemies/cultist/cultist.gd" type="Script" id=4]
[ext_resource path="res://game/enemies/cultist/sprites/walk.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
height = 12.0

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachine" id=18]
states/attack/node = SubResource( 6 )
states/attack/position = Vector2( 594, -109 )
states/die/node = SubResource( 7 )
states/die/position = Vector2( 462, 125 )
states/idle/node = SubResource( 8 )
states/idle/position = Vector2( 537, 12 )
states/walk/node = SubResource( 9 )
states/walk/position = Vector2( 750, 12 )
transitions = [ "idle", "walk", SubResource( 10 ), "walk", "idle", SubResource( 11 ), "idle", "die", SubResource( 12 ), "die", "idle", SubResource( 13 ), "idle", "attack", SubResource( 14 ), "attack", "idle", SubResource( 15 ), "walk", "attack", SubResource( 16 ), "attack", "walk", SubResource( 17 ) ]
start_node = "idle"
graph_offset = Vector2( -11, -193 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[sub_resource type="CircleShape2D" id=20]

[sub_resource type="SegmentShape2D" id=21]
b = Vector2( -7, 0 )

[sub_resource type="CapsuleShape2D" id=22]
radius = 2.30484
height = 26.8303

[node name="Cultist" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 67
script = ExtResource( 4 )
max_health = 100.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/die = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 19 )

[node name="Colliders" type="Node2D" parent="."]

[node name="Hitbox" type="Area2D" parent="Colliders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/Hitbox"]
position = Vector2( -16, 0 )
shape = SubResource( 20 )

[node name="Hurtbox" type="Area2D" parent="Colliders"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Colliders/Hurtbox"]
shape = SubResource( 1 )

[node name="EdgeDetector" type="Area2D" parent="Colliders"]
position = Vector2( -8.958, 17.154 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/EdgeDetector"]
shape = SubResource( 21 )

[node name="WallDetector" type="Area2D" parent="Colliders"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/WallDetector"]
position = Vector2( -13.7583, -1.06186 )
shape = SubResource( 22 )

[node name="Raycasts" type="Node2D" parent="Colliders"]

[node name="RayCast2D" type="RayCast2D" parent="Colliders/Raycasts"]
enabled = true
cast_to = Vector2( -100, 0 )
collision_mask = 3

[node name="RayCast2D2" type="RayCast2D" parent="Colliders/Raycasts"]
enabled = true
cast_to = Vector2( -100, 33 )
collision_mask = 3

[node name="RayCast2D3" type="RayCast2D" parent="Colliders/Raycasts"]
enabled = true
cast_to = Vector2( -100, -33 )
collision_mask = 3

[node name="Timers" type="Node" parent="."]

[node name="PatrolTimer" type="Timer" parent="Timers"]
one_shot = true

[connection signal="area_entered" from="Colliders/Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_exited" from="Colliders/EdgeDetector" to="." method="_on_EdgeDetector_body_exited"]
[connection signal="body_entered" from="Colliders/WallDetector" to="." method="_on_WallDetector_body_entered"]
[connection signal="timeout" from="Timers/PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
